--- a/UI/ConvertPage.xaml
+++ b/UI/ConvertPage.xaml
@@ -8,13 +8,10 @@
       d:DesignHeight="450" d:DesignWidth="500"
       Title="ConverGIFPage" Background="LightGray" >
     <Page.Resources>
-        <Style x:Key="baseButtonStyle" TargetType="{x:Type Button}">
-            <Setter Property="Height" Value="30" />
-            <Setter Property="Width" Value="60" />
-        </Style>
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="10" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -22,25 +19,25 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <Button Content="Select Image(s)" Click="Button_Click_Open" Style="{StaticResource baseButtonStyle}" Width="90" Grid.Column="0" Grid.Row="0" Margin="10,10,10,0" />
+        <Button Content="Select Image(s)" Click="Button_Click_Open" Style="{StaticResource BaseButtonStyle}"  Grid.Column="0" Grid.Row="1" />
         <ListView x:Name="lv_SelectedGIFs"
-                  Grid.Row="1" Grid.Column="0" Margin="10" 
+                  Grid.Row="2" Grid.Column="0" Margin="10" 
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   ScrollViewer.CanContentScroll="True" 
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   SelectionMode="Extended" 
                   SelectionChanged="lv_SelectedGIFs_SelectionChanged" />
-        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="0,10,10,10">
+        <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" VerticalAlignment="Top" Margin="0,10,10,10">
             <Button x:Name="btn_Remove" 
                     Content="Remove"
-                    Margin="0,0,0,5"
                     Click="Button_Click_Remove"
                     IsEnabled="False"
-                    Style="{StaticResource baseButtonStyle}">
+                    Style="{StaticResource BaseButtonStyle}">
             </Button>
+            <TextBlock Height="10" Focusable="False" IsEnabled="False" />
             <Button Content="Convert" Click="Button_Click_Convert">
                 <Button.Style>
-                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource baseButtonStyle}">
+                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonStyle}">
                         <Setter Property="IsEnabled" Value="True" />
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding Items.Count, ElementName=lv_SelectedGIFs}" Value="0">
