--- a/UI/HashesPage.xaml
+++ b/UI/HashesPage.xaml
@@ -38,11 +38,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        <Style x:Key="buttonBaseStyle" TargetType="{x:Type Button}">
-            <Setter Property="Height" Value="30" />
-            <Setter Property="Width" Value="60" />
-        </Style>
-        <Style x:Key="buttonTopRowStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource buttonBaseStyle}">
+        <Style x:Key="buttonTopRowStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonStyle}">
             <Setter Property="IsEnabled" Value="True" />
             <Style.Triggers>
                 <DataTrigger Binding="{Binding TextBoxTagValue, Mode=TwoWay}" Value="Edit">
@@ -53,7 +49,7 @@
                 </DataTrigger>
             </Style.Triggers>
         </Style>
-        <Style x:Key="buttonSaveCancelStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource buttonBaseStyle}">
+        <Style x:Key="buttonSaveCancelStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonStyle}">
             <Setter Property="Grid.Row" Value="5" />
             <Setter Property="Grid.ColumnSpan" Value="2" />
             <Setter Property="Visibility" Value="Collapsed" />
@@ -151,11 +147,12 @@
         <Style x:Key="textBoxHashesValidation" TargetType="{x:Type TextBox}" BasedOn="{StaticResource textBoxBaseStyle}">
             <Setter Property="Validation.ErrorTemplate" Value="{StaticResource errorTemplateSilverlightStyle}" />
         </Style>
-        <Style TargetType="{x:Type Label}">
+        <Style TargetType="TextBlock">
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Grid.Column" Value="0" />
             <Setter Property="Margin" Value="5" />
-            <Setter Property="HorizontalContentAlignment" Value="Right" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
         </Style>
     </Page.Resources>
     <Grid>
@@ -173,14 +170,15 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" HorizontalAlignment="Center">
-            <Button Content="New" Margin="5,0,5,0" Style="{StaticResource buttonTopRowStyle}" Click="Button_Click_NewOrEdit" />
+            <Button Content="New" Style="{StaticResource buttonTopRowStyle}" Click="Button_Click_NewOrEdit" />
             <ComboBox x:Name="cbx_KnownHashes" SelectionChanged="cbx_KnownHashes_SelectionChanged">
                 <ComboBox.Style>
                     <Style TargetType="{x:Type ComboBox}">
                         <Setter Property="IsEnabled" Value="True" />
                         <Setter Property="DisplayMemberPath" Value="Name" />
                         <Setter Property="Width" Value="250" />
-                        <Setter Property="Height" Value="30" />
+                        <Setter Property="Height" Value="34" />
+                        <Setter Property="Margin" Value="5 0" />
                         <Setter Property="VerticalContentAlignment" Value="Center" />
                         <Setter Property="SelectedValue" Value="{Binding Selected, Mode=TwoWay}" />
                         <Style.Triggers>
@@ -194,7 +192,7 @@
                     </Style>
                 </ComboBox.Style>
             </ComboBox>
-            <Button Content="Edit" Margin="5,0,5,0" Click="Button_Click_NewOrEdit">
+            <Button Content="Edit" Click="Button_Click_NewOrEdit">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource buttonTopRowStyle}">
                         <Style.Triggers>
@@ -205,7 +203,8 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button Content="Delete" Margin="0,0,5,0" Click="Button_Click_Delete">
+            <TextBlock Focusable="False" IsEnabled="False" Width="5" />
+            <Button Content="Delete" Click="Button_Click_Delete">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource buttonTopRowStyle}">
                         <Style.Triggers>
@@ -217,10 +216,10 @@
                 </Button.Style>
             </Button>
         </StackPanel>
-        <Label Content="Namecard Name:" Grid.Row="1" />
-        <Label Content="Main Hash:" Grid.Row="2" />
-        <Label Content="Preview Hash:" Grid.Row="3" />
-        <Label Content="Top Banner Hash:" Grid.Row="4" />
+        <TextBlock Text="Namecard Name:" Grid.Row="1" />
+        <TextBlock Text="Main Hash:" Grid.Row="2" />
+        <TextBlock Text="Preview Hash:" Grid.Row="3" />
+        <TextBlock Text="Top Banner Hash:" Grid.Row="4" />
         <TextBox x:Name="txtBox_Name" Width="300" Grid.Row="1" Style="{StaticResource textBoxHashesValidation}">
             <TextBox.Text>
                 <Binding Path="HashNameText" UpdateSourceTrigger="PropertyChanged">
