Added the alphabetical sorting to the confirmation window that I forgot about.

--- a/Components/ConfirmationWindowPage.xaml
+++ b/Components/ConfirmationWindowPage.xaml
@@ -4,11 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GenshinNamecardINICreator.Components"
+             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
              mc:Ignorable="d" 
              FontSize="18" Background="{StaticResource PrimaryBackground}">
     <UserControl.Resources>
         <Style TargetType="{x:Type Button}" BasedOn="{StaticResource BaseButtonStyle}" />
-
+        <CollectionViewSource x:Key="NamecardsViewSource" Source="{Binding Namecards}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="Name" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
     </UserControl.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <Grid>
@@ -34,7 +39,7 @@
                       Width="250" 
                       VerticalAlignment="Center" 
                       VerticalContentAlignment="Center"
-                      ItemsSource="{Binding Namecards}">
+                      ItemsSource="{Binding Source={StaticResource NamecardsViewSource}}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Name}" />
