--- a/Components/CreateNamecardModPage.xaml
+++ b/Components/CreateNamecardModPage.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GenshinNamecardINICreator.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="{StaticResource PrimaryBackground}" FontSize="18">
+             Background="{StaticResource PrimaryBackground}" FontSize="18">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -57,11 +57,13 @@
         <ListView x:Name="lv_Left" 
                   Grid.Row="1" 
                   Grid.Column="0"
+                  Height="290"
                   Margin="5"
                   ItemsSource="{Binding OutOfCollection}" />
         <ListView x:Name="lv_Right" 
                   Grid.Row="1" 
-                  Grid.Column="2" 
+                  Grid.Column="2"
+                  MaxHeight="290"
                   Margin="5" 
                   ItemsSource="{Binding InsideCollection}" />
         <!--Create Button-->
